2006-08-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/NSCalendarDate+UIx.[hm]: category removed, code
	moved into NSCalendarDate+Scheduler instead.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -setTimeZone:newTZ]): new method to
	configure the timezone from SOGoUserFolder when the instance is
	being created.
	([SOGoAppointmentFolder -viewTimeZone]): MET was removed. Returns
	the value of the new "timezone" ivar.

2006-08-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.{css,js}: added a tabview with
	the date selector in the first page and the container of the
	future calendar selector in the second page.

	* UI/WebServerResources/generic.js: added code for handling tabbed
	views.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -productFrameworkName]):
	returns the bundle name associated to the current running product.

2006-08-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/UIxAppointmentEditor.js: fixed the AJAX
	exception by invoking a timeout on the opener rather than invoking
	the list refresh method.

	* UI/Scheduler/UIxCalDayView.m ([UIxCalDayView -labelForDay]):
	removed method.

	* UI/Scheduler/UIxCalWeekView.m ([UIxCalWeekView -weekBeforePrevWeekQueryParameters]) 
	([UIxCalWeekView -prevWeekQueryParameters]) 
	([UIxCalWeekView -nextWeekQueryParameters]) 
	([UIxCalWeekView -weekAfterNextWeekQueryParameters]): new methods
	that return the dates relatively to the current day.
	([UIxCalWeekView -lastWeekName]) 
	([UIxCalWeekView -currentWeekName]) 
	([UIxCalWeekView -nextWeekName]) 
	([UIxCalWeekView -weekAfterNextWeekName]) 
	([UIxCalWeekView -_weekNumberWithOffsetFromToday:offset]): new
	methods that returns the label for the corresponding weeks.

	* UI/Scheduler/UIxCalDayTable.[hm]: new class module/component
	used by UIxCalDayView and UIxCalWeekView to display the events
	occuring in one or more days.
