@@ -1,5 +1,8 @@
 2006-08-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/Scheduler/UIxDatePickerScript.[hm]: component removed since
+	all javascript code is now put in Scheduler.js/generic.js.
+
 	* UI/Scheduler/NSCalendarDate+UIx.[hm]: category removed, code
 	moved into NSCalendarDate+Scheduler instead.
 
